# Laconic

./: LICENSE  README.md
Encoding&Apps/: bfs_reorder.py  gen_csr.py
Laconic_parallel/: .gitignore  CMakeLists.txt
Laconic_parallel/core/: IO.h  atomic.h  check.h  common.h  compress.h  filter.h  hash.h  typedef.h  util.h
Laconic_parallel/script/: compile.sh  run.sh
Laconic_parallel/src/: compress.cc
Re-Pair&Laconic_serial/compression/: Laconic_serial_compression.py  Re-Pair.py  monitor_Laconic_serial_mem.sh  monitor_Re-Pair_mem.sh
Re-Pair&Laconic_serial/rule_compress/: setup.py
Re-Pair&Laconic_serial/rule_compress/compress_op/: add_self_loop.h  check.h  compress.h  convert.h  depth_filter.h  filter.h  function.cpp  fusion.h  gen_mask.h  get_part_graph_info.h  graphIO.h  merge.h  norm.h  splice.h  util.h
Re-Pair&Laconic_serial/rule_compress/rule_compress.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
benchmarks/: README.md
benchmarks/uk-2007-05@100000/Laconic_encoding_compressed/: encoded.compress
benchmarks/uk-2007-05@100000/Laconic_rule_compressed/: rule_compressed_elist.npy  rule_compressed_vlist.npy
benchmarks/uk-2007-05@100000/Re-Pair_compressed/: compressed_elist.npy  compressed_vlist.npy
benchmarks/uk-2007-05@100000/origin/: csr_vlist.npy  csr_vlist.txt
benchmarks/uk-2007-05@100000/peak_memory/: 1+rule.txt  10+rule.txt  12+rule.txt  15+rule.txt  20+rule.txt  5+rule.txt  8+rule.txt  Encoding_mem.txt  Re-Pair_mem.txt
benchmarks/uk-2007-05@100000/reorder/: reordered_elist.txt  reordered_vlist.txt  unencoded.txt
